# Document-Assistant-Agent

./: .env.example  .gitignore  ARCHITECTURE_RULES.md  DECISIONS.md  DEV_SPEC.md  FACTS.md  IMPLEMENTATION_AUDIT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  OPEN_QUESTIONS.json  QA_TEST.md  QA_TEST_PROGRESS.md  SMOKE_TESTS.md  project_highlight.md  pyproject.toml  resume_draft_zh.md  resume_writer_generated_zh.md  to_do.md
config/model_profiles/: real.json
data/filestore/doc_6dcd4ce23d88/: dv_720d8e73e562.md
data/sqlite/: app.db
data/traces/: trace_c89ef98834a5.json
scripts/: generate_bjj_train_300.py  generate_seed_sft_dataset.py  prepare_bjj_sft_split.py  run_smoke_tests.py  run_test_suite.py  sync_web_contracts.py  train_policy_lora.py
server/app/agents/: __init__.py
server/app/api/: __init__.py  __main__.py  app.py  (+3 more)
server/tests/: support.py  test_api.py  test_evaluation_sft.py  test_ingestion.py  test_jobs.py  test_observability.py  test_orchestrator.py  test_project_metadata.py  test_retrieval.py
skills/hourly-acceptance-shipper/: SKILL.md
skills/pda-implementer/: SKILL.md
skills/qa-full-chain-tester/: SKILL.md
test/: generate_markdown_fixtures.py
web/: .env.local.example  next.config.mjs  package-lock.json  package.json  playwright.config.mjs  vitest.config.mjs
web/app/: app.js  globals.css  index.html  layout.js  styles.css
web/components/: chat-client.jsx  dashboard-client.jsx  evaluation-client.jsx  json-card.jsx  renderers.js  traces-client.jsx
web/e2e/: app-flow.spec.js
web/lib/: api.js  chat-stream.js  contracts.js
(+126 files in other folders)
