[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-assistant-agent"
version = "0.1.0"
description = "Personal Document Assistant Agent backend and local web shell."
readme = "DEV_SPEC.md"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=0.4.24,<1.0",
  "fastapi>=0.110,<1.0",
  "pydantic>=1.10,<3.0",
  "uvicorn>=0.30,<1.0",
]

[project.scripts]
pda-api = "server.app.api.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
