[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-assistant-agent"
version = "0.1.0"
description = "Personal Document Assistant Agent backend and local web shell."
readme = "DEV_SPEC.md"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=0.4.24,<1.0",
  "fastapi>=0.110,<1.0",
  "pydantic>=1.10,<3.0",
  "torch>=2.2,<3.0",
  "transformers>=4.40,<5.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
evaluation = [
  "datasets>=2.18,<4.0",
  "langchain-openai>=0.1,<1.0",
  "ragas>=0.1,<1.0",
]
rerank = []
training = [
  "accelerate>=0.28,<2.0",
  "datasets>=2.18,<4.0",
  "peft>=0.10,<1.0",
]

[project.scripts]
pda-api = "server.app.api.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
